Виконує рефакторинг коду

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </a>
           <ul class="header__list">
             <li class="header__item">
-              <a class="header__link link-current" href="./index.html">Студия</a>
+              <a class="header__link current" href="./index.html">Студия</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="./portfolio.html">Портфолио</a>
