--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
           </a>
           <ul class="header__list">
             <li class="header__item">
-              <a class="header__link current" href="./index.html">Студия</a>
+              <a class="header__link" href="./index.html">Студия</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="./portfolio.html">Портфолио</a>
+              <a class="header__link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="">Контакты</a>
